--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "firebase": "^10.0.0",
     "lucide-react": "^0.263.0",
     "tailwindcss": "^3.3.0"
